He colocado las imagenes con el texto y tambien he introducido la tipografia

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="icon" href="../LogoFondoNegro.jpeg">
     <title>Circuitos</title>
 </head>
@@ -22,70 +25,70 @@
     </div>
     <div class="contenido">
         <p>Estos son los circuitos elegidos este 2024 para disputar los diferentes campeonatos:</p>
-        <ul>
+        <ul id="listaCircuitos">
             <li>CKCL:</li>
                 <ul>
-                    <div id="cabañas">
+                    <div class="circuitos">
                         <img src="cabañas raras.jpg">
                         <li>Cabañas Raras (Leon)</li>
                     </div>
-                    <div id="masquekarting">
+                    <div class="circuitos">
                         <img src="masquekarting.jpg">
                         <li>Masquekarting (Burgos)</li>
                     </div>
-                    <div id="benamariel">
+                    <div class="circuitos">
                         <img src="el silvar.jpg">
                         <li>El Silvar (Leon)</li>
                     </div>
-                    <div class="kotarr">
-                        <img src="kotarr.jpg" alt="">
+                    <div class="circuitos">
+                        <img src="kotarr.jpg">
                         <li>Kotarr (Burgos)</li>
                     </div>
-                    <div id="tordesillas">
+                    <div class="circuitos">
                         <img src="tordesillas.jpg">
                         <li>Tordesillas (Valladolid)</li>
                     </div>   
                 </ul><br>
             <li>CMK:</li>
                 <ul>
-                    <div class="recas">
+                    <div class="circuitos">
                         <img src="recas.jpg">
                         <li>Recas (Toledo)</li>
                     </div>
-                    <div id="tarancon">
+                    <div class="circuitos">
                         <img src="dr7.jpg">
                         <li>DR7 (Cuenca)</li>
                     </div>
-                    <div class="kotarr">
-                        <img src="kotarr.jpg" alt="">
+                    <div class="circuitos">
+                        <img src="kotarr.jpg">
                         <li>Kotarr (Burgos)</li>
                     </div>
-                    <div class="kotarr">
-                        <img src="kotarr.jpg" alt="">
+                    <div class="circuitos">
+                        <img src="kotarr.jpg">
                         <li>Kotarr (Burgos)</li>
                     </div>
-                    <div class="recas">
+                    <div class="circuitos">
                         <img src="recas.jpg">
                         <li>Recas (Toledo)</li>
                     </div>
                 </ul><br>
             <li>CEK</li>
                 <ul>
-                    <div id="campillos">
+                    <div class="circuitos">
                         <img src="campillos.jpg">
                         <li>Campillos (Malaga)</li>
                     </div>
-                    <div id="zuera">
+                    <div class="circuitos">
                         <img src="zuera.jpg">
                         <li>Zuera (Zaragoza)</li>
                     </div>
-                    <div id="motorland">
+                    <div class="circuitos">
                         <img src="motorland.jpg">
                         <li>Motorland (Teruel)</li>
                     </div>
-                    <div id="chiva">
+                    <div class="circuitos">
                         <img src="chiva.jpg">
-                        <li>Chiva(Valencia)</li>
+                        <li>Chiva (Valencia)</li>
                     </div>
                 </ul>
         </ul>
