--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="icon" href="LogoFondoNegro.jpeg">
     <title>Inicio</title>
 </head>
@@ -22,12 +25,13 @@
     </div>
     <div class="contenido">
         <h1 class="bienvenida">Bienvenido a Nebreda Racing Team</h1>
+        <img id="principal" src="LogoFondoNegro.jpeg">
     </div>
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 
-    <img id="principal" src="LogoFondoNegro.jpeg">
+    
 
     <script src="js/javascript.js"></script>
     
