He terminado de colocar las imagenes, he añadido a los titulos la misma tipografia y tambien he añadido las politicas de uso, privacidad y cookies

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -26,75 +26,75 @@
     <div class="contenido">
         <p>Estos son los circuitos elegidos este 2024 para disputar los diferentes campeonatos:</p>
         <ul id="listaCircuitos">
-            <li>CKCL:</li>
+            <li class="titulo">CKCL:</li>
                 <ul>
                     <div class="circuitos">
                         <img src="cabañas raras.jpg">
-                        <li>Cabañas Raras (Leon)</li>
+                        <li class="texto">Cabañas Raras (Leon)</li>
                     </div>
                     <div class="circuitos">
                         <img src="masquekarting.jpg">
-                        <li>Masquekarting (Burgos)</li>
+                        <li class="texto">Masquekarting (Burgos)</li>
                     </div>
                     <div class="circuitos">
                         <img src="el silvar.jpg">
-                        <li>El Silvar (Leon)</li>
+                        <li class="texto">El Silvar (Leon)</li>
                     </div>
                     <div class="circuitos">
                         <img src="kotarr.jpg">
-                        <li>Kotarr (Burgos)</li>
+                        <li class="texto">Kotarr (Burgos)</li>
                     </div>
                     <div class="circuitos">
                         <img src="tordesillas.jpg">
-                        <li>Tordesillas (Valladolid)</li>
+                        <li class="texto">Tordesillas (Valladolid)</li>
                     </div>   
                 </ul><br>
-            <li>CMK:</li>
+            <li class="titulo">CMK:</li>
                 <ul>
                     <div class="circuitos">
                         <img src="recas.jpg">
-                        <li>Recas (Toledo)</li>
+                        <li class="texto">Recas (Toledo)</li>
                     </div>
                     <div class="circuitos">
                         <img src="dr7.jpg">
-                        <li>DR7 (Cuenca)</li>
+                        <li class="texto">DR7 (Cuenca)</li>
                     </div>
                     <div class="circuitos">
                         <img src="kotarr.jpg">
-                        <li>Kotarr (Burgos)</li>
+                        <li class="texto">Kotarr (Burgos)</li>
                     </div>
                     <div class="circuitos">
                         <img src="kotarr.jpg">
-                        <li>Kotarr (Burgos)</li>
+                        <li class="texto">Kotarr (Burgos)</li>
                     </div>
                     <div class="circuitos">
                         <img src="recas.jpg">
-                        <li>Recas (Toledo)</li>
+                        <li class="texto">Recas (Toledo)</li>
                     </div>
                 </ul><br>
-            <li>CEK</li>
+            <li class="titulo">CEK</li>
                 <ul>
                     <div class="circuitos">
                         <img src="campillos.jpg">
-                        <li>Campillos (Malaga)</li>
+                        <li class="texto">Campillos (Malaga)</li>
                     </div>
                     <div class="circuitos">
                         <img src="zuera.jpg">
-                        <li>Zuera (Zaragoza)</li>
+                        <li class="texto">Zuera (Zaragoza)</li>
                     </div>
                     <div class="circuitos">
                         <img src="motorland.jpg">
-                        <li>Motorland (Teruel)</li>
+                        <li class="texto">Motorland (Teruel)</li>
                     </div>
-                    <div class="circuitos">
+                    <div class="circuitos" id="chiva">
                         <img src="chiva.jpg">
-                        <li>Chiva (Valencia)</li>
+                        <li class="texto">Chiva (Valencia)</li>
                     </div>
                 </ul>
         </ul>
     </div>
     <div class="footer">
-        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="../indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="../indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="../indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
     <script src="../js/javascript.js"></script>
