--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img id="principal" src="LogoFondoNegro.jpeg">
     </div>
     <div class="footer">
-        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
     
