--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -28,7 +28,7 @@
         <ul>Los campeonatos en los que competimos son:<br><br>
             <div class="campeonato">
             <img class="logo" src="logoCKCL.png" id="CKCL">
-            <li class="t_campeonato">CKCL: Campeonato de Karting de Castilla y Leon:
+            <li class="t_campeonato"><p class="titulo">CKCL: Campeonato de Karting de Castilla y Leon:</p>
                 <p>El Campeonato de Karting de Castilla y Leon es una competicion que reune pilotos de la propia comunidad y algunos de
                    otras comunidades. Estos pilotos compiten en 5 circuitos que se encuentran dentro de la misma.
                    Estos pilotos se dividen en categorias y esas categorias se clasifican por la edad. Las categorias son las siguientes:</p>
@@ -44,7 +44,7 @@
         </div>
         <div  class="campeonato">
         <img class="logo" src="logoCMK.png" id="CMK">
-            <li class="t_campeonato">CMK: Campeonato Madrileño de Karting:
+            <li class="t_campeonato"><p class="titulo">CMK: Campeonato Madrileño de Karting:</p> 
                 <p>El Campeonato Madrileño de Karting se disputa en circuitos de otras comunidades debido a que en la comunidad de Madrid no hay circuitos con condiciones para competir</p>
                     <ul>
                         <li>MINIMAX: Edad minima de 8 años</li>
@@ -61,7 +61,7 @@
         </div>
         <div  class="campeonato">
         <img class="logo" src="logoCEK.jpg" id="CEK">
-            <li class="t_campeonato">CEK: Campeonato de España de Karting:
+            <li class="t_campeonato"><p class="titulo">CEK: Campeonato de España de Karting:</p> 
                 <p>Este campeonato es el de mayor nivel en cuanto a competicion dentro del pais. Principalmente es para pilotos españoles pero tambien pueden competir pilotos de otras nacionalidades. Este campeonato ya se realiza en circuitos internacionales como el de Zuera o Motorland entre otros</p>
                     <ul>
                         <li>ACADEMY: Edad minima de 6 años</li>
@@ -77,7 +77,7 @@
         </ul>
     </div>
     <footer class="footer">
-        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="../indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="../indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="../indexCoockies.html" target="_blank">Uso de cookies</a>
     </footer>
 
     <script src="../js/javascript.js"></script>
