--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -44,7 +44,7 @@
         </form>
     </div>
     <div class="footer">
-        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="../indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="../indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="../indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
     <script src="../js/javascript.js"></script>
