He añadido el fondo de abajo

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -94,6 +94,7 @@
         </ul>
     </div>
     <div class="footer">
+        <img src="../LogoSinFondo.png">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="../indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="../indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="../indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
