--- a/Licencias/index.html
+++ b/Licencias/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../LogoFondoNegro.jpeg">
     <title>Licencias</title>
 </head>
 <body>
@@ -23,7 +24,8 @@
         Aqui hablaremos sobre las diferentes licencias y sus precios
     </div>
     <div class="footer">
-        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
+        <img src="../LogoSinFondo.png">
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="../indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="../indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="../indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
     <script src="../js/javascript.js"></script>
