--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <h1 class="bienvenida">Bienvenido a Nebreda Racing Team</h1>
         <img id="principal" src="LogoFondoNegro.jpeg">
     </div>
+    
     <div class="footer">
+        <img src="LogoSinFondo.png">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  <a href="indexAvisoLegal.html" target="_blank">Aviso legal</a> | <a href="indexPrivacidad.html" target="_blank">Privacidad</a> | <a href="indexCoockies.html" target="_blank">Uso de cookies</a>
     </div>
 
