He añadido informacion de licencias y seguros y tambien logos de las federaciones

--- a/Licencias/index.html
+++ b/Licencias/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="icon" href="../LogoFondoNegro.jpeg">
     <title>Licencias</title>
 </head>
@@ -21,7 +24,24 @@
         </a>
     </div>
     <div class="contenido">
-        Aqui hablaremos sobre las diferentes licencias y sus precios
+        <p>Para poder competir en cualquier campeonato, ya sea, nacional o internacional, es obligatorio obtener una licencia  y un seguro para cada piloto, mecanico y equipo. En funcion de la categoria, la licencia tiene un precio u otro. El seguro depende de si la competicion es nacional o internacioal.
+            Para solicitar tanto la licencia como el seguro debemos ir a la RFEDA, en caso de ser nacional y a la FIA en caso de ser internacional.</p><br>
+
+            <img class="federaciones" src="logo rfeda.png">
+
+        <h2 class="federacion">Real Federacion Española de Automovilismo (RFEDA)</h2>
+
+        <p>Para solicitar la licencia nacioanl e internacional voy a dejar los siguientes enlaces:</p><br>
+        <a class="licencia" href="https://www.rfeda.es/licencias/c/0/i/60915627/normativa" target="_blank">Normativa</a><br><br>
+        <a class="licencia" href="https://www.rfeda.es/licencias/c/0/i/60915649/impresos" target="_blank">Examen medico</a><br><br>
+        <a class="licencia" href="https://www.rfeda.es/licencias/c/0/i/60915651/solicitud" target="_blank">Solicitud</a><br><br>
+
+            <img class="federaciones" src="logo fia.png">
+
+        <h2 class="federacion">Federacion internacioal de Automovilismo (FIA)</h2>
+        <p>En la pagina oficial de la FIA no hay opcion para solicitar ni la licencia ni el seguro ya que se realiza a traves de la RFEDA, pero si que podemos consultar los calendarios de los campeonatos de europeos y mundiales de Karting
+            Para mas informacion, dejo este enlace</p><br>
+            <a class="licencia" href="https://www.fiakarting.com/competition-list" target="_blank">FIA Karting</a>
     </div>
     <div class="footer">
         <img src="../LogoSinFondo.png">
